tests/errors/test_struct_layout_overflow_error.mob
struct Overflow packed {
    huge: uint32[9223372036854775807]
}

print(Overflow.size)
